--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
